[gd_scene load_steps=17 format=3 uid="uid://cq8tcw283lqtk"]

[ext_resource type="Script" uid="uid://ciscmsu263r4g" path="res://Scenes/Level3/level_3.gd" id="1_ngiah"]
[ext_resource type="PackedScene" uid="uid://bkiom600l0aa6" path="res://Scenes/Player/player.tscn" id="2_mmvth"]
[ext_resource type="PackedScene" uid="uid://dhqgwfunu3r6r" path="res://Scenes/crate_small.tscn" id="3_47qmd"]
[ext_resource type="PackedScene" uid="uid://ds1etbutpbpeb" path="res://Scenes/wall.tscn" id="3_62ljv"]
[ext_resource type="PackedScene" uid="uid://xcbhh04btsa7" path="res://Scenes/GameInterface/game_interface.tscn" id="3_t2rjc"]
[ext_resource type="PackedScene" uid="uid://cu4nq7khuo13p" path="res://Scenes/PauseMenu/pause_menu.tscn" id="4_62ljv"]
[ext_resource type="PackedScene" uid="uid://bhwnbjrgtca6v" path="res://Scenes/laser_box.tscn" id="4_oo3du"]
[ext_resource type="PackedScene" uid="uid://cxc4xnt4ygwdb" path="res://Scenes/crate_medium.tscn" id="4_rskgy"]
[ext_resource type="PackedScene" uid="uid://bme5w3mijp8xs" path="res://Scenes/laser.tscn" id="5_oo3du"]
[ext_resource type="PackedScene" uid="uid://chvgq0q3d4esx" path="res://Scenes/laser_end.tscn" id="8_aht15"]
[ext_resource type="PackedScene" uid="uid://c143oxi3rakq1" path="res://Scenes/crate_large.tscn" id="9_rskgy"]
[ext_resource type="PackedScene" uid="uid://cckye4ixgsbsm" path="res://Scenes/Level3/lava_background.tscn" id="10_aht15"]
[ext_resource type="Texture2D" uid="uid://d0tpj21o16u3e" path="res://Sprites/Plank.png" id="11_4oxwn"]
[ext_resource type="Texture2D" uid="uid://dy22ij0t1jqg0" path="res://Sprites/Metal Floor.png" id="12_orgcr"]
[ext_resource type="Texture2D" uid="uid://by2qa5hbn00r4" path="res://Sprites/Water.png" id="13_lviwr"]
[ext_resource type="Texture2D" uid="uid://cryqdstq3nvpw" path="res://Sprites/DarkCrate.png" id="16_8rser"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_ngiah")

[node name="Player" parent="." instance=ExtResource("2_mmvth")]
process_mode = 1
position = Vector2(635, 734)
walking_speed = 300.0

[node name="GameObjects" type="Node2D" parent="."]
process_mode = 1
position = Vector2(635, 734)
scale = Vector2(0.1, 0.1)

[node name="crate_large" parent="GameObjects" instance=ExtResource("9_rskgy")]
position = Vector2(66909.99, -4140)
rotation = 0.34906584
scale = Vector2(60, 60)

[node name="crate_large3" parent="GameObjects" instance=ExtResource("9_rskgy")]
position = Vector2(70079.99, 1300.002)
rotation = 2.6162486
scale = Vector2(60, 60)

[node name="crate_large2" parent="GameObjects" instance=ExtResource("9_rskgy")]
position = Vector2(59639.992, -1939.998)
rotation = 0.710349
scale = Vector2(60, 60)

[node name="crate_small" parent="GameObjects" instance=ExtResource("3_47qmd")]
position = Vector2(55960.004, 610.00024)
scale = Vector2(199.99997, 199.99997)

[node name="crate_small2" parent="GameObjects" instance=ExtResource("3_47qmd")]
position = Vector2(77169.99, 3710)
scale = Vector2(120, 120)

[node name="crate_medium" parent="GameObjects" instance=ExtResource("4_rskgy")]
position = Vector2(64869.992, 4219.9985)
rotation = 0.3874631
scale = Vector2(199.99995, 199.99995)

[node name="crate_medium2" parent="GameObjects" instance=ExtResource("4_rskgy")]
position = Vector2(74380, -4420.0005)
rotation = -0.26005405
scale = Vector2(199.99995, 199.99995)

[node name="Walls" type="Node2D" parent="GameObjects"]
position = Vector2(2079.9998, -2269.9998)

[node name="Wall" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(-6119.999, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall2" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(3010, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall3" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(12179.999, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall4" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(21329.998, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall5" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(-6130, -6890)
rotation = 1.5707964
scale = Vector2(9.999998, 9.999998)

[node name="Wall6" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(-6129.999, 2280)
rotation = 1.5707964
scale = Vector2(9.999998, 9.999998)

[node name="Wall7" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(30499.996, -6869.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall8" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(39689.996, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall9" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(48860, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall17" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(58030, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall18" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(67200, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall19" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(76350, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall21" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(85530, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall22" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(94710, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall23" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(103880.01, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall20" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(113050, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall24" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(122220, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall25" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(131370, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall26" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(140550, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall27" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(149730, -6879.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall35" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(58030, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall36" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(67200, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall37" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(76350, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall38" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(85530, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall39" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(94710, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall40" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(103880.01, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall41" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(113050, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall42" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(122220, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall43" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(131370, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall44" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(140550, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall45" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(149730, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall10" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(-6129.999, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall11" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(3059.9998, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall12" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(12230, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall13" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(21389.998, 9329.999)
scale = Vector2(9.999998, 9.999998)

[node name="Wall14" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(30550, 9330)
scale = Vector2(9.999998, 9.999998)

[node name="Wall15" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(39739.996, 9330)
scale = Vector2(9.999998, 9.999998)

[node name="Wall16" parent="GameObjects/Walls" instance=ExtResource("3_62ljv")]
position = Vector2(48909.992, 9330)
scale = Vector2(9.999998, 9.999998)

[node name="Laser1" type="Node2D" parent="GameObjects"]
visible = false

[node name="LaserBox" parent="GameObjects/Laser1" instance=ExtResource("4_oo3du")]
position = Vector2(50430, -3109.9998)
rotation = 2.5586526
scale = Vector2(200, 200)

[node name="laser" parent="GameObjects/Laser1" instance=ExtResource("5_oo3du")]
position = Vector2(53610, 1499.9999)
rotation = 0.97214836
scale = Vector2(9, 9)

[node name="LaserEnd" parent="GameObjects/Laser1" instance=ExtResource("8_aht15")]
position = Vector2(56009.996, 5019.999)
rotation = -2.1816616
scale = Vector2(3.999999, 3.999999)

[node name="Laser2" type="Node2D" parent="GameObjects"]

[node name="LaserBox" parent="GameObjects/Laser2" instance=ExtResource("4_oo3du")]
position = Vector2(55289.996, -5850.0005)
rotation = 3.0351276
scale = Vector2(200, 200)

[node name="LaserEnd" parent="GameObjects/Laser2" instance=ExtResource("8_aht15")]
position = Vector2(55740.004, -2720.0002)
rotation = -1.6929693
scale = Vector2(3.999999, 3.999999)

[node name="Laser3" type="Node2D" parent="GameObjects"]

[node name="LaserBox2" parent="GameObjects/Laser3" instance=ExtResource("4_oo3du")]
position = Vector2(64699.992, 1440.0005)
rotation = 0.37350044
scale = Vector2(199.99995, 199.99995)

[node name="LaserEnd2" parent="GameObjects/Laser3" instance=ExtResource("8_aht15")]
position = Vector2(65780, -1639.999)
rotation = 1.9373155
scale = Vector2(3.9999986, 3.9999986)

[node name="Laser4" type="Node2D" parent="GameObjects"]

[node name="LaserBox2" parent="GameObjects/Laser4" instance=ExtResource("4_oo3du")]
position = Vector2(60580, -2910.0002)
rotation = 0.6981317
scale = Vector2(199.99995, 199.99995)

[node name="LaserEnd2" parent="GameObjects/Laser4" instance=ExtResource("8_aht15")]
position = Vector2(62760.004, -5680.0015)
rotation = 2.2619467
scale = Vector2(3.9999986, 3.9999986)

[node name="Laser5" type="Node2D" parent="GameObjects"]

[node name="LaserBox2" parent="GameObjects/Laser5" instance=ExtResource("4_oo3du")]
position = Vector2(70650, 2500.0005)
rotation = 2.6406832
scale = Vector2(199.99995, 199.99995)

[node name="LaserEnd2" parent="GameObjects/Laser5" instance=ExtResource("8_aht15")]
position = Vector2(72420, 5500.003)
rotation = 4.2044983
scale = Vector2(3.9999986, 3.9999986)

[node name="Laser6" type="Node2D" parent="GameObjects"]

[node name="LaserBox2" parent="GameObjects/Laser6" instance=ExtResource("4_oo3du")]
position = Vector2(74809.99, -2019.9994)
rotation = 2.8344147
scale = Vector2(199.99995, 199.99995)

[node name="LaserEnd2" parent="GameObjects/Laser6" instance=ExtResource("8_aht15")]
position = Vector2(75930.01, 1030.0006)
rotation = 4.3982296
scale = Vector2(3.9999986, 3.9999986)

[node name="Background" type="Node2D" parent="GameObjects"]

[node name="LavaBackground" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(91550, -3949.9995)
scale = Vector2(4.991206, 6.4018526)

[node name="LavaBackground7" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(91550, -3949.9995)
scale = Vector2(4.991206, 6.4018526)

[node name="LavaBackground8" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(91550, -3949.9995)
scale = Vector2(4.991206, 6.4018526)

[node name="LavaBackground9" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(86460, -3949.9995)
scale = Vector2(4.991206, 6.4018526)

[node name="LavaBackground2" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(96629.99, -3940.0002)
scale = Vector2(4.991206, 6.4018526)

[node name="LavaBackground5" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(101720, -3939.9995)
scale = Vector2(4.991206, 6.4018526)

[node name="LavaBackground3" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(91500, 3730)
scale = Vector2(4.991206, 6.4018526)

[node name="LavaBackground10" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(86410, 3680)
scale = Vector2(4.991206, 6.4018526)

[node name="LavaBackground4" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(96590, 3750)
scale = Vector2(4.991206, 6.4018526)

[node name="LavaBackground6" parent="GameObjects/Background" instance=ExtResource("10_aht15")]
position = Vector2(101689.99, 3770)
scale = Vector2(4.991206, 6.4018526)

[node name="Plank" type="Sprite2D" parent="GameObjects"]
position = Vector2(94100.14, -143.27916)
rotation = 1.5707964
scale = Vector2(4.866404, 19.985714)
texture = ExtResource("11_4oxwn")

[node name="MetalFloor" type="Sprite2D" parent="GameObjects"]
position = Vector2(565.0007, 0.000497818)
scale = Vector2(8.974608, 13.73047)
texture = ExtResource("12_orgcr")

[node name="MetalFloor2" type="Sprite2D" parent="GameObjects"]
z_index = -100
position = Vector2(51850, -95.000305)
scale = Vector2(8.974608, 14.736327)
texture = ExtResource("12_orgcr")

[node name="MetalFloor3" type="Sprite2D" parent="GameObjects"]
z_index = -100
position = Vector2(60480, -190.0003)
scale = Vector2(8.974608, 14.736327)
texture = ExtResource("12_orgcr")

[node name="MetalFloor4" type="Sprite2D" parent="GameObjects"]
z_index = -100
position = Vector2(69440, -260.0003)
scale = Vector2(8.974608, 14.736327)
texture = ExtResource("12_orgcr")

[node name="MetalFloor5" type="Sprite2D" parent="GameObjects"]
z_index = -100
position = Vector2(78220, -210.0003)
scale = Vector2(8.974608, 14.736327)
texture = ExtResource("12_orgcr")

[node name="MetalFloor6" type="Sprite2D" parent="GameObjects"]
z_index = -100
position = Vector2(85040, -260.0003)
scale = Vector2(8.974608, 14.736327)
texture = ExtResource("12_orgcr")

[node name="Water" type="Sprite2D" parent="GameObjects"]
position = Vector2(12219.999, -50.000004)
scale = Vector2(13.671874, 13.671874)
texture = ExtResource("13_lviwr")

[node name="Water2" type="Sprite2D" parent="GameObjects"]
position = Vector2(26140, 5.0007935)
scale = Vector2(13.671874, 13.740235)
texture = ExtResource("13_lviwr")

[node name="Water3" type="Sprite2D" parent="GameObjects"]
position = Vector2(40130, -20.000534)
scale = Vector2(13.671874, 13.7890625)
texture = ExtResource("13_lviwr")

[node name="Plank2" type="Sprite2D" parent="GameObjects"]
position = Vector2(10510, -19.99997)
rotation = -4.728097
scale = Vector2(6.313656, 10.54777)
texture = ExtResource("11_4oxwn")

[node name="Plank3" type="Sprite2D" parent="GameObjects"]
position = Vector2(24290.002, -1710.0005)
rotation = -5.1173053
scale = Vector2(6.313656, 10.54777)
texture = ExtResource("11_4oxwn")

[node name="Plank4" type="Sprite2D" parent="GameObjects"]
position = Vector2(34730.004, 670)
rotation = -3.8955748
scale = Vector2(6.313656, 10.54777)
texture = ExtResource("11_4oxwn")

[node name="Plank5" type="Sprite2D" parent="GameObjects"]
position = Vector2(43060, 2490.0005)
rotation = -5.2551866
scale = Vector2(6.313656, 10.54777)
texture = ExtResource("11_4oxwn")

[node name="DarkCrate" type="Sprite2D" parent="GameObjects"]
position = Vector2(18269.998, -50)
scale = Vector2(4.990234, 4.990234)
texture = ExtResource("16_8rser")

[node name="DarkCrate2" type="Sprite2D" parent="GameObjects"]
position = Vector2(31139.992, -2800)
scale = Vector2(4.990234, 4.990234)
texture = ExtResource("16_8rser")

[node name="DarkCrate3" type="Sprite2D" parent="GameObjects"]
position = Vector2(40089.996, 3599.9995)
scale = Vector2(4.990234, 4.990234)
texture = ExtResource("16_8rser")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="GameInterface" parent="UI" instance=ExtResource("3_t2rjc")]
visible = false

[node name="PauseMenu" parent="UI" instance=ExtResource("4_62ljv")]
visible = false

[connection signal="escape" from="UI/GameInterface" to="." method="_on_game_interface_escape"]
[connection signal="rotate_left" from="UI/GameInterface" to="." method="_on_game_interface_rotate_left"]
[connection signal="rotate_right" from="UI/GameInterface" to="." method="_on_game_interface_rotate_right"]
[connection signal="stop" from="UI/GameInterface" to="." method="_on_game_interface_stop"]
[connection signal="walk_forward" from="UI/GameInterface" to="." method="_on_game_interface_walk_forward"]
[connection signal="continue_game" from="UI/PauseMenu" to="." method="_on_pause_menu_continue_game"]
[connection signal="return_to_menu" from="UI/PauseMenu" to="." method="_on_pause_menu_return_to_menu"]
